--- a/config/static/single-pod/common/Makefile
+++ b/config/static/single-pod/common/Makefile
@@ -8,8 +8,20 @@ SINGLEPOD_CA_SUBJECT := CN=freeipa-$(shell date +%Y%m%d%H%M%S ), O=$(SINGLEPOD_R
 SINGLEPOD_ENV_FILE := env.properties
 
 SINGLEPOD_SECRETS_FILE := secrets.properties
-ifeq (,$(SINGLEPOD_PASSWORD))
-$(error "SINGLEPOD_PASSWORD is required for generating the secret with the password; you can set it before call 'make'")
+ifeq (,$(SINGLEPOD_PASSWORD)$(SINGLEPOD_ADMIN_PASSWORD)$(SINGLEPOD_DS_PASSWORD))
+$(error "SINGLEPOD_PASSWORD or SINGLEPOD_ADMIN_PASSWORD and SINGLEPOD_DS_PASSWORD are required for generating the secret with the password; you can set it before call 'make'")
+endif
+# If SINGLEPOD_PASSWORD is set, try to set default value for
+# empty password variables
+ifneq (,$(SINGLEPOD_PASSWORD))
+SINGLEPOD_ADMIN_PASSWORD ?= $(SINGLEPOD_PASSWORD)
+SINGLEPOD_DS_PASSWORD ?= $(SINGLEPOD_PASSWORD)
+endif
+ifeq (,$(SINGLEPOD_ADMIN_PASSWORD))
+$(error "SINGLEPOD_ADMIN_PASSWORD" is empty; try to set SINGLEPOD_ADMIN_PASSWORD=my-admin-pass")
+endif
+ifeq (,$(SINGLEPOD_DS_PASSWORD))
+$(error "SINGLEPOD_DS_PASSWORD" is empty; try to set SINGLEPOD_DS_PASSWORD=my-ds-pass")
 endif
 
 .PHONY: configure
@@ -21,5 +33,7 @@ configure:
 	@echo "IPA_SERVER_HOSTNAME=$(SINGLEPOD_HOSTNAME)" >> $(SINGLEPOD_ENV_FILE)
 	@true > $(SINGLEPOD_SECRETS_FILE)
 	@echo "IPA_SERVER_PASSWORD=$(SINGLEPOD_PASSWORD)" >> $(SINGLEPOD_SECRETS_FILE)
+	@echo "IPA_SERVER_ADMIN_PASSWORD=$(SINGLEPOD_ADMIN_PASSWORD)" >> $(SINGLEPOD_SECRETS_FILE)
+	@echo "IPA_SERVER_DS_PASSWORD=$(SINGLEPOD_DS_PASSWORD)" >> $(SINGLEPOD_SECRETS_FILE)
 	@$(KUSTOMIZE) edit set namespace $(OCP_NAMESPACE)
 
